--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ nav li a{
 
     <fieldset class="them">
             <legend>Chức năng làm lại</legend>
-          <video src="./video/lamlai.mp4" width="1010" height="600" controls>
+          <video src="./video/refresh.mp4" width="1010" height="600" controls>
               
           </video>
     </fieldset>
